fix: type-safety, cycle button generics, and URL handling